# ipasir2_solver_lingeling

./: CMakeLists.txt  README.md  ipasir2.c
